# pcm-parser

./: .gitignore  CLAUDE.md  README.md  parser.py  pyproject.toml
scripts/: convert_all.py
src/pcm_parser/: __init__.py  api.py  cli.py  core.py  model.py  parser.py  utils.py
tests/: conftest.py  test_core.py
