[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pcm-parser"
version = "0.1.0"
requires-python = ">=3.10"
description = "Parse UMC PCM CSV files into long-format CSV"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pcm-parser = "pcm_parser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
